// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmBalance do not show available atoms when the user has none in the first place 1`] = `
<div
  class="balance-header"
>
  <div>
    <div
      class="button-container"
    >
      <div>
        <tmbtn-stub
          class="send-button"
          type="secondary"
          value="Send"
        />
         
        <tmbtn-stub
          class="withdraw-rewards"
          id="withdraw-btn"
          value="Claim Rewards"
        />
      </div>
       
      <!---->
       
      <button
        class="tutorial-button"
      >
        <span>
          Need some tokens?
        </span>
      </button>
    </div>
     
    <div
      class="row values-container lower-header"
    >
      <h2
        class="title"
      >
        Token
      </h2>
       
      <div
        class="currency-div"
      >
        <div
          class="available-atoms"
        >
          <div>
            <div
              class="icon-and-denom"
            >
              <h3>
                <img
                  class="currency-flag"
                  src="/img/icons/currencies/lunie.png"
                />
                
                ATOM
                
                <span>
                  0
                
                </span>
              </h3>
               
              <div
                class="rewards"
              >
                <h2>
                  +0
                </h2>
              </div>
            </div>
             
            <div
              class="available-container"
            >
              
              Available
              
              <span
                class="available"
              >
                0
              </span>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div />
    </div>
     
    <sendmodal-stub
      denoms="ATOM"
    />
     
    <modalwithdrawrewards-stub />
     
    <!---->
  </div>
</div>
`;

exports[`TmBalance show the balance header when signed in 1`] = `
<div
  class="balance-header"
>
  <div>
    <div
      class="button-container"
    >
      <div>
        <tmbtn-stub
          class="send-button"
          type="secondary"
          value="Send"
        />
         
        <tmbtn-stub
          class="withdraw-rewards"
          id="withdraw-btn"
          value="Claim Rewards"
        />
      </div>
       
      <!---->
       
      <button
        class="tutorial-button"
      >
        <span>
          Need some tokens?
        </span>
      </button>
    </div>
     
    <div
      class="row values-container lower-header"
    >
      <h2
        class="title"
      >
        Token
      </h2>
       
      <div
        class="currency-div"
      >
        <div
          class="available-atoms"
        >
          <div>
            <div
              class="icon-and-denom"
            >
              <h3>
                <img
                  class="currency-flag"
                  src="/img/icons/currencies/lunie.png"
                />
                
                ATOM
                
                <span>
                  3,210
                
                </span>
              </h3>
               
              <div
                class="rewards"
              >
                <h2>
                  +1000.45
                </h2>
              </div>
            </div>
             
            <div
              class="available-container"
            >
              
              Available
              
              <span
                class="available"
              >
                1,230
              </span>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div />
    </div>
     
    <sendmodal-stub
      denoms="ATOM"
    />
     
    <modalwithdrawrewards-stub />
     
    <!---->
  </div>
</div>
`;
